docs: 可使用jdk支持的椭圆曲线来生成密钥对